Added about button

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Steven Cherian</title>
     
+    <link rel="icon" href="Logo.png">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&display=swap" rel="stylesheet">
     <link href="/Styles/fontawesome/css/all.css" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
@@ -22,7 +23,7 @@
             <div class="logo">
                 <img src="Logo.png" alt="Logo" width="150">
             </div>
-                <div class="inner-content">
+            <div class="inner-content">
                 <h1>Steven Cherian</h1>
                 <p>Software Developer</p>
                 <ul class="icons">
@@ -43,12 +44,13 @@
                     <li>
                         <a href="https://drive.google.com/drive/u/0/folders/1aPjs73QZRxlM6A_wV8deoCPx-NPvyobC" target="_blank" rel="noopener noreferrer">
                             <span class="icon" style=" font-size: 1.5rem;">
-                                <i class="fas fa-file-alt"></i>
+                                <i class="far fa-file-alt"></i>
                             </span>
                         </a>
                     </li>
-                </ul> 
-            </div>  
+                </ul>
+                <button id="aboutButton">About</button>
+            </div>
         </div>
     </div>
 
