--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
                         </a>
                     </li>
                 </ul>
-                <button id="aboutButton">About</button>
+                <a href="about.html">
+                    <button id="aboutButton">About</button>
+                </a>
             </div>
         </div>
     </div>
