--- a/projects.html
+++ b/projects.html
@@ -22,8 +22,8 @@
         <nav class="nav">
             <img src="Logo.png" alt="Logo" width="50" style="margin: 30px 12px -24px 0px">
             <a class="nav-items home" href="index.html">Home</a>
-            <a class="nav-items about" id="active" href="#">About</a>
-            <a class="nav-items projects" href="projects.html">Projects</a>
+            <a class="nav-items about" href="about.html">About</a>
+            <a class="nav-items projects"  id="active" href="#">Projects</a>
             <a class="nav-items experience" href="experience.html">Experience</a>
         </nav>
         <div class="header">
