--- a/about.html
+++ b/about.html
@@ -20,17 +20,17 @@
 <body>
     <div class="page-content">
         <nav class="nav">
-            <img src="Logo.png" alt="Logo" width="50" style="margin: 30px 12px -24px 0px">
             <a class="nav-items home" href="index.html">Home</a>
             <a class="nav-items about" id="active" href="#">About</a>
+            <img src="images/Logo.png" alt="Logo" width="50">
             <a class="nav-items projects" href="projects.html">Projects</a>
             <a class="nav-items experience" href="experience.html">Experience</a>
         </nav>
-        <div class="header">
-            <div class="logo">
-                <img src="Logo.png" alt="Logo" width="150">
+        <div class="aboutHeader">
+            <div class="MyPic">
+                <img src="images/MyPic.png" alt="Logo" width="180">
             </div>
-           
+            <p>Hi! My name is Steven Cherian. I am a senior in computer science at VCU skilled in Java, C, Python, and many other languages. I have completed numerous academic projects along with personal projects. These include android-based applications, websites, programs, and more. Following my final year, I plan on furthering my education by completing the Accelerated Bachelors to Masters graduate program in computer science at VCU.</p>
         </div>
     </div>
 
