--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="page-content">
         <div class="header">
             <div class="logo">
-                <img src="Logo.png" alt="Logo" width="150">
+                <img src="images/Logo.png" alt="Logo" width="150">
             </div>
             <div class="inner-content">
                 <h1>Steven Cherian</h1>
