--- a/projects.html
+++ b/projects.html
@@ -20,16 +20,14 @@
 <body>
     <div class="page-content">
         <nav class="nav">
-            <img src="Logo.png" alt="Logo" width="50" style="margin: 30px 12px -24px 0px">
             <a class="nav-items home" href="index.html">Home</a>
             <a class="nav-items about" href="about.html">About</a>
+            <img src="images/Logo.png" alt="Logo" width="50">
             <a class="nav-items projects"  id="active" href="#">Projects</a>
             <a class="nav-items experience" href="experience.html">Experience</a>
         </nav>
         <div class="header">
-            <div class="logo">
-                <img src="Logo.png" alt="Logo" width="150">
-            </div>
+    
            
         </div>
     </div>
