Fixed site tab icon

--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Steven Cherian</title>
     
-    <link rel="icon" href="Logo.png">
+    <link rel="icon" href="images/Logo.png">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&display=swap" rel="stylesheet">
     <link href="/Styles/fontawesome/css/all.css" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
@@ -33,6 +33,5 @@
             <p>Hi! My name is Steven Cherian. I am a senior in computer science at VCU skilled in Java, C, Python, and many other languages. I have completed numerous academic projects along with personal projects. These include android-based applications, websites, programs, and more. Following my final year, I plan on furthering my education by completing the Accelerated Bachelors to Masters graduate program in computer science at VCU.</p>
         </div>
     </div>
-
 </body>
 </html>
