--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Steven Cherian</title>
     
-    <link rel="icon" href="Logo.png">
+    <link rel="icon" href="images/Logo.png">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&display=swap" rel="stylesheet">
     <link href="/Styles/fontawesome/css/all.css" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
@@ -55,6 +55,5 @@
             </div>
         </div>
     </div>
-
 </body>
 </html>
