--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
                             </span>
                         </a>
                     </li>
+                    <li>
+                        <a onclick="openEmail()" style="cursor: pointer;" target="_blank" rel="noopener noreferrer">
+                            <span class="icon" style=" font-size: 1.5rem;">
+                                <i class="far fa-envelope"></i>
+                            </span>
+                        </a>
+                    </li>
                 </ul>
                 <a href="about.html">
                     <button id="aboutButton">About</button>
