Added project descriptions

--- a/projects.html
+++ b/projects.html
@@ -31,7 +31,7 @@
                 <img class="project-image" src="images/PickMeUp.svg" alt="PickMeUp Image">
                 <div class="col" style="margin: 30px;">
                     <h1>PickMeUp</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <p style="font-size: 18px;">This is a phone app designed to aid visually impaired people locate an object in a room, walk towards it, and pick it up. The phone is placed onto a bracket on a glove with vibration motors. With the use of object detection through a neural network and augmented reality, the user scans the room, which locates all compatible objects. The user then tells the app what he or she wants to pick up, and the app guides the user towards said object with the vibration motors, avoiding any obstacles.</p>
                 
                 </div>
             </div> 
@@ -39,7 +39,7 @@
                 <img class="project-image" src="images/SecureSafe.svg" alt="SecureSafe Image">
                 <div class="col" style="margin: 30px;">
                     <h1>SecureSafe</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <p style="font-size: 18px;">A password organizer app designed to securely save passwords for multiple user accounts and occasions. Uses SHA-1 cryptographic hashing to ensure all passwords are secure and unable to be stolen from malware.</p>
                 
                 </div>
             </div> 
