Added TPC to projects page

--- a/projects.html
+++ b/projects.html
@@ -27,20 +27,32 @@
             <a class="nav-items experience" href="experience.html">Experience</a>
         </nav>
         <div class="col" style="margin-top: 65px;">
-            <div class="row" style="margin-bottom: 120; align-items: center; transition: 0.2s">
+            <div class="row" style="margin-bottom: 50px; align-items: center;">
                 <img class="project-image" src="images/PickMeUp.svg" alt="PickMeUp Image">
                 <div class="col" style="margin: 30px;">
                     <h1>PickMeUp</h1>
                     <p style="font-size: 18px;">This is a phone app designed to aid visually impaired people locate an object in a room, walk towards it, and pick it up. The phone is placed onto a bracket on a glove with vibration motors. With the use of object detection through a neural network and augmented reality, the user scans the room, which locates all compatible objects. The user then tells the app what he or she wants to pick up, and the app guides the user towards said object with the vibration motors, avoiding any obstacles.</p>
-                
+                    <button class="visit-button" style="cursor: wait;">Coming soon</button>
                 </div>
             </div> 
-            <div class="row" style="margin-bottom: 120; align-items: center; transition: 0.2s">
+            <div class="row" style="margin-bottom: 50px; align-items: center;">
                 <img class="project-image" src="images/SecureSafe.svg" alt="SecureSafe Image">
                 <div class="col" style="margin: 30px;">
                     <h1>SecureSafe</h1>
                     <p style="font-size: 18px;">A password organizer app designed to securely save passwords for multiple user accounts and occasions. Uses SHA-1 cryptographic hashing to ensure all passwords are secure and unable to be stolen from malware.</p>
-                
+                    <a href="https://github.com/StevenCherian/SecureSafe" target="_blank" rel="noopener noreferrer">
+                        <button class="visit-button">View on Github</button>
+                    </a>
+                </div>
+            </div>
+            <div class="row" style="margin-bottom: 50px; align-items: center;">
+                <img class="project-image" src="images/TPCMockup.png" alt="TPC Image">
+                <div class="col" style="margin: 30px;">
+                    <h1>TPC Website</h1>
+                    <p style="font-size: 18px;">Worked with a team at my church to completely redesign and enhance our church website to improve usability.</p>
+                    <a href="https://www.tpcrichmond.church/" target="_blank" rel="noopener noreferrer">
+                        <button class="visit-button">Visit</button>
+                    </a>
                 </div>
             </div> 
         </div>
