Added content to experience page. Updated nav bar

--- a/experience.html
+++ b/experience.html
@@ -27,6 +27,55 @@
             <a class="nav-items experience" id="active" href="#">Experience</a>
         </nav>
         
+        <div class="row" style="margin-top: 65px;">
+            <div class="col">
+                <div class="row" style="margin-bottom: 50px;">
+                    <div class="col" style="text-align: center;">
+                        <h1>Education</h1>
+                        <p style="font-size: 15px;"><b>Virginia Commonwealth University</b></p>
+                        <p style="font-size: 15px;">Bachelor of Science in Computer Science - Concentration in Cybersecurity, Minor in Business</p>
+                        <p style="font-size: 15px;">GPA: 3.62</p>
+                    </div>
+                    <div style="height: 15px; padding: 0px 15px 0px 15px;"></div>
+                    <div class="col" style="text-align: center;">
+                        <h1>Skills</h1>
+                        <p style="font-size: 15px;"><b>Languages</b></p>
+                        <p style="font-size: 15px;">Java | C | Python | SQL</p>
+                        <p style="font-size: 15px;">PHP | HTML | CSS | JavaScript</p>
+                    </div>
+                    <div style="height: 15px; padding: 0px 15px 0px 15px;"></div>
+                    <div class="col" style="text-align: center;">
+                        <h1>Certifications</h1>
+                        <p style="font-size: 15px;"><b>IBM Master the Mainframe</b></p>
+                        <p style="font-size: 15px;">Levels 1 and 2 completed</p>
+                    </div>
+                </div>
+                <div class="row" style="margin-bottom: 50px;">
+                    <div class="col" style="text-align: center;">
+                        <h1>Relevant Experience</h1>
+                        <p style="font-size: 15px;"><b>Tabernacle Pentecostal Church</b></p>
+                        <p style="font-size: 15px;">Website Developer</p>
+                        <p style="font-size: 15px;">Lead Audio Engineer</p>
+                    </div>
+                    <div style="height: 15px; padding: 0px 15px 0px 15px;"></div>
+                    <div class="col" style="text-align: center;">
+                        <h1>Work Experience</h1>
+                        <p style="font-size: 15px;"><b>Chick-Fil-A</b></p>
+                        <p style="font-size: 15px;">Host | Cashier | Driver</p>
+                        <p style="font-size: 15px;">July 2017 - Present</p>
+                    </div>
+                    <div style="height: 15px; padding: 0px 15px 0px 15px;"></div>
+                    <div class="col" style="text-align: center;">
+                        <h1>Awards</h1>
+                        <p style="font-size: 15px;"><b>Henrico VCU Engineering Scholarship</b></p>
+                        <p style="font-size: 15px;">2018 - 2022</p>
+                        <p style="font-size: 15px;"><b>Chick-Fil-A Leadership Scholarship</b></p>
+                        <p style="font-size: 15px;">2019 - 2022</p>
+                        <p style="font-size: 15px;"><b>Dean's List</b> | 2019 - 2021</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
