Changes to nav bar. Edits to experience.

--- a/experience.html
+++ b/experience.html
@@ -22,56 +22,56 @@
         <nav class="nav">
             <a class="nav-items home" href="index.html">Home</a>
             <a class="nav-items about" href="about.html">About</a>
-            <img src="images/Logo.png" alt="Logo" width="50">
+            <a><img src="images/Logo.png" alt="Logo" width="50"></a>
             <a class="nav-items projects" href="projects.html">Projects</a>
             <a class="nav-items experience" id="active" href="#">Experience</a>
         </nav>
         
         <div class="row" style="margin-top: 65px;">
             <div class="col">
-                <div class="row" style="margin-bottom: 50px;">
-                    <div class="col" style="text-align: center;">
+                <div class="row">
+                    <div class="col" style="text-align: center; margin-bottom: 50px;">
                         <h1>Education</h1>
                         <p style="font-size: 15px;"><b>Virginia Commonwealth University</b></p>
                         <p style="font-size: 15px;">Bachelor of Science in Computer Science - Concentration in Cybersecurity, Minor in Business</p>
                         <p style="font-size: 15px;">GPA: 3.62</p>
                     </div>
                     <div style="height: 15px; padding: 0px 15px 0px 15px;"></div>
-                    <div class="col" style="text-align: center;">
+                    <div class="col" style="text-align: center; margin-bottom: 50px;">
                         <h1>Skills</h1>
                         <p style="font-size: 15px;"><b>Languages</b></p>
                         <p style="font-size: 15px;">Java | C | Python | SQL</p>
                         <p style="font-size: 15px;">PHP | HTML | CSS | JavaScript</p>
                     </div>
                     <div style="height: 15px; padding: 0px 15px 0px 15px;"></div>
-                    <div class="col" style="text-align: center;">
+                    <div class="col" style="text-align: center; margin-bottom: 50px;">
                         <h1>Certifications</h1>
                         <p style="font-size: 15px;"><b>IBM Master the Mainframe</b></p>
                         <p style="font-size: 15px;">Levels 1 and 2 completed</p>
                     </div>
                 </div>
-                <div class="row" style="margin-bottom: 50px;">
-                    <div class="col" style="text-align: center;">
+                <div class="row">
+                    <div class="col" style="text-align: center; margin-bottom: 50px;">
                         <h1>Relevant Experience</h1>
                         <p style="font-size: 15px;"><b>Tabernacle Pentecostal Church</b></p>
                         <p style="font-size: 15px;">Website Developer</p>
                         <p style="font-size: 15px;">Lead Audio Engineer</p>
                     </div>
                     <div style="height: 15px; padding: 0px 15px 0px 15px;"></div>
-                    <div class="col" style="text-align: center;">
+                    <div class="col" style="text-align: center; margin-bottom: 50px;">
                         <h1>Work Experience</h1>
                         <p style="font-size: 15px;"><b>Chick-Fil-A</b></p>
                         <p style="font-size: 15px;">Host | Cashier | Driver</p>
                         <p style="font-size: 15px;">July 2017 - Present</p>
                     </div>
                     <div style="height: 15px; padding: 0px 15px 0px 15px;"></div>
-                    <div class="col" style="text-align: center;">
+                    <div class="col" style="text-align: center; margin-bottom: 50px;">
                         <h1>Awards</h1>
-                        <p style="font-size: 15px;"><b>Henrico VCU Engineering Scholarship</b></p>
-                        <p style="font-size: 15px;">2018 - 2022</p>
-                        <p style="font-size: 15px;"><b>Chick-Fil-A Leadership Scholarship</b></p>
-                        <p style="font-size: 15px;">2019 - 2022</p>
+                        <p style="font-size: 15px;"><b>Henrico VCU Engineering Scholarship</b><br>2018 - 2022</p>
+                        <p style="font-size: 15px;"><b>Chick-Fil-A Leadership Scholarship</b><br>2019 - 2023</p>
                         <p style="font-size: 15px;"><b>Dean's List</b> | 2019 - 2021</p>
+                        <p style="font-size: 15px;"><b>Sternheimer Award Finalist</b><br>PickMeUp (Capstone)</p>
+                        <!-- <p style="font-size: 15px; padding: 0px;">PickMeUp (Capstone)</p> -->
                     </div>
                 </div>
             </div>
