--- a/projects.html
+++ b/projects.html
@@ -22,12 +22,12 @@
         <nav class="nav">
             <a class="nav-items home" href="index.html">Home</a>
             <a class="nav-items about" href="about.html">About</a>
-            <img src="images/Logo.png" alt="Logo" width="50">
+            <a><img src="images/Logo.png" alt="Logo" width="50"></a>
             <a class="nav-items projects"  id="active" href="#">Projects</a>
             <a class="nav-items experience" href="experience.html">Experience</a>
         </nav>
         <div class="col" style="margin-top: 65px;">
-            <div class="row" style="margin-bottom: 50px; align-items: center;">
+            <div class="row" style="margin-bottom: 65px; align-items: center;">
                 <img class="project-image" src="images/PickMeUp.svg" alt="PickMeUp Image">
                 <div class="col" style="margin: 30px;">
                     <h1>PickMeUp</h1>
@@ -35,7 +35,7 @@
                     <button class="visit-button" style="cursor: wait;">Coming soon</button>
                 </div>
             </div> 
-            <div class="row" style="margin-bottom: 50px; align-items: center;">
+            <div class="row" style="margin-bottom: 65px; align-items: center;">
                 <img class="project-image" src="images/SecureSafe.svg" alt="SecureSafe Image">
                 <div class="col" style="margin: 30px;">
                     <h1>SecureSafe</h1>
@@ -45,7 +45,7 @@
                     </a>
                 </div>
             </div>
-            <div class="row" style="margin-bottom: 50px; align-items: center;">
+            <div class="row" style="margin-bottom: 65px; align-items: center;">
                 <img class="project-image" src="images/TPCMockup.png" alt="TPC Image">
                 <div class="col" style="margin: 30px;">
                     <h1>TPC Website</h1>
