--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
         <nav class="nav">
             <a class="nav-items home" href="index.html">Home</a>
             <a class="nav-items about" id="active" href="#">About</a>
-            <img src="images/Logo.png" alt="Logo" width="50">
+            <a><img src="images/Logo.png" alt="Logo" width="50"></a>
             <a class="nav-items projects" href="projects.html">Projects</a>
             <a class="nav-items experience" href="experience.html">Experience</a>
         </nav>
@@ -32,7 +32,7 @@
             </div>
             <p>Hi! My name is Steven Cherian. I am a senior in computer science at VCU skilled in Java, C, Python, and many other languages. I have completed numerous academic projects along with personal projects. These include android-based applications, websites, programs, and more. Following my final year, I plan on furthering my education by completing the Accelerated Bachelors to Masters graduate program in computer science at VCU.</p>
             <p style="margin-bottom: 0px; padding-bottom: 0px;">Feel free to contact me at</p>
-            <p onclick="openEmail()" style="cursor: pointer; margin: 0px 0px 30px 0px; padding: 0px;"><u>stevencherian.va@gmail.com</u></p>
+            <p onclick="openEmail()" style="margin: 0px 0px 30px 0px; padding: 0px;"><u style="cursor: pointer;">stevencherian.va@gmail.com</u></p>
         </div>
     </div>
 </body>
