Minor change to about page

--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
             <div class="MyPic">
                 <img src="images/MyPic.png" alt="Logo" width="180">
             </div>
-            <p>Hi! My name is Steven Cherian. I am a senior in computer science at VCU skilled in Java, C, Python, and many other languages. I have completed numerous academic projects along with personal projects. These include android-based applications, websites, programs, and more. Following my final year, I plan on furthering my education by completing the Accelerated Bachelors to Masters graduate program in computer science at VCU.</p>
+            <p>Hi! My name is Steven Cherian. I am a senior in computer science at VCU skilled in Java, C, Python, SQL, PHP, HTML, CSS, and JavaScript. I have completed numerous academic projects along with personal projects. These include android-based applications, websites, programs, and more. Following my final year, I plan on furthering my education by completing the Accelerated Bachelors to Masters graduate program in computer science at VCU.</p>
             <p style="margin-bottom: 0px; padding-bottom: 0px;">Feel free to contact me at</p>
             <p onclick="openEmail()" style="margin: 0px 0px 30px 0px; padding: 0px;"><u style="cursor: pointer;">stevencherian.va@gmail.com</u></p>
         </div>
