--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         </a>
                     </li> 
                     <li>
-                        <a href="https://drive.google.com/drive/u/0/folders/1aPjs73QZRxlM6A_wV8deoCPx-NPvyobC" target="_blank" rel="noopener noreferrer">
+                        <a href="https://drive.google.com/drive/folders/1aPjs73QZRxlM6A_wV8deoCPx-NPvyobC?usp=sharing" target="_blank" rel="noopener noreferrer">
                             <span class="icon" style=" font-size: 1.5rem;">
                                 <i class="far fa-file-alt"></i>
                             </span>
