Updated experience page

--- a/experience.html
+++ b/experience.html
@@ -34,7 +34,7 @@
                         <h1>Education</h1>
                         <p style="font-size: 15px;"><b>Virginia Commonwealth University</b></p>
                         <p style="font-size: 15px;">Bachelor of Science in Computer Science - Concentration in Cybersecurity, Minor in Business</p>
-                        <p style="font-size: 15px;">GPA: 3.62</p>
+                        <p style="font-size: 15px;">GPA: 3.63</p>
                     </div>
                     <div style="height: 15px; padding: 0px 15px 0px 15px;"></div>
                     <div class="col" style="text-align: center; margin-bottom: 50px;">
@@ -48,6 +48,8 @@
                         <h1>Certifications</h1>
                         <p style="font-size: 15px;"><b>IBM Master the Mainframe</b></p>
                         <p style="font-size: 15px;">Levels 1 and 2 completed</p>
+                        <p style="font-size: 15px;"><b>AWS Cloud Practitioner</b></p>
+                        <p style="font-size: 15px;">In Progress</p>
                     </div>
                 </div>
                 <div class="row">
@@ -71,7 +73,7 @@
                         <p style="font-size: 15px;"><b>Chick-Fil-A Leadership Scholarship</b><br>2019 - 2023</p>
                         <p style="font-size: 15px;"><b>Dean's List</b> | 2019 - 2021</p>
                         <p style="font-size: 15px;"><b>Sternheimer Award Finalist</b><br>PickMeUp (Capstone)</p>
-                        <!-- <p style="font-size: 15px; padding: 0px;">PickMeUp (Capstone)</p> -->
+                        <p style="font-size: 15px;"><b>Awarded 2nd Best Overall in CS</b><br>PickMeUp (Capstone)</p>
                     </div>
                 </div>
             </div>
