--- a/experience.html
+++ b/experience.html
@@ -39,6 +39,9 @@
                     <div style="height: 15px; padding: 0px 15px 0px 15px;"></div>
                     <div class="col" style="text-align: center; margin-bottom: 50px;">
                         <h1>Work Experience</h1>
+                        <p style="font-size: 15px;"><b>VA Department of Elections</b></p>
+                        <p style="font-size: 15px;">Cybersecurity Intern</p>
+                        <p style="font-size: 15px;">June 2022 - May 2022</p>
                         <p style="font-size: 15px;"><b>Chick-Fil-A</b></p>
                         <p style="font-size: 15px;">Host | Cashier | Driver</p>
                         <p style="font-size: 15px;">July 2017 - Present</p>
