--- a/projects.html
+++ b/projects.html
@@ -31,9 +31,12 @@
                 <div class="col" style="margin: 30px;">
                     <h1>PickMeUp</h1>
                     <p style="font-size: 18px;">This is a phone app designed to aid visually impaired people locate an object in a room, walk towards it, and pick it up. The phone is placed onto a bracket on a glove with vibration motors. With the use of object detection through a neural network and augmented reality, the user scans the room, which locates all compatible objects. The user then tells the app what he or she wants to pick up, and the app guides the user towards said object with the vibration motors, avoiding any obstacles.</p>
-                    <a href="#" class="video-button">View Demo</a>
+                    <a href="#">
+                        <button class="video-button">View Demo</button>
+                    </a>
+
                     <div class="video-container">
-                        <video controls>
+                        <video id="video" controls>
                             <source src="videos/PickMeUpDemo.MOV" type="video/mp4">
                         </video>
                         <span class="close">&#10006;</span>
