--- a/projects.html
+++ b/projects.html
@@ -27,6 +27,16 @@
         </nav>
         <div class="col" style="margin-top: 65px;">
             <div class="row" style="margin-bottom: 65px; align-items: center;">
+                <img class="project-image" src="images/EVRVAMockup.png" alt="EVRVA Image">
+                <div class="col" style="margin: 30px;">
+                    <h1>EVRVA Website</h1>
+                    <p style="font-size: 18px;">This is a startup created by a close friend that will improve the accessibility of EV charging. I developed the site from the ground up using the NextJS framework and Tailwind CSS.</p>
+                    <a href="https://evrva.us" target="_blank" rel="noopener noreferrer">
+                        <button class="visit-button">Visit</button>
+                    </a>
+                </div>
+            </div> 
+            <div class="row" style="margin-bottom: 65px; align-items: center;">
                 <img class="project-image" src="images/PickMeUp.svg" alt="PickMeUp Image">
                 <div class="col" style="margin: 30px;">
                     <h1>PickMeUp</h1>
